--- a/sass/utils/_mixin.scss
+++ b/sass/utils/_mixin.scss
@@ -1,40 +1,52 @@
+@mixin center-flex($d: flex, $jc: center, $ai: center) {
+  display: $d;
+  justify-content: $jc;
+  align-items: $ai;
+}
+@mixin font($fw: normal, $fs: 14px, $lh: 1.14, $ls: 0.03em) {
+  font-weight: $fw;
+  font-size: $fs;
+  line-height: $lh;
+  letter-spacing: $ls;
+}
+
 @mixin mq($screen) {
-    $mobile: 480px;
-    $tablet: 768px;
-    $desktop: 1200px;
-  
-    @if $screen == mobile-only {
-      @media screen and (max-width: #{$tablet - 0.02}){
-        @content;
-      }
-    } @else if $screen == mobile {
-      @media screen and (min-width: $mobile) {
-        @content;
-      }
-    } @else if $screen == tablet-only {
-      @media screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02}) {
-        @content;
-      }
-    } @else if $screen == tablet {
-      @media screen and (min-width: $tablet) {
-        @content;
-      }
-    } @else if $screen == desktop {
-      @media screen and (min-width: $desktop) {
-        @content;
-      }
-    } @else if $screen == notDesktop {
-      @media screen and (max-width: #{$desktop - 0.02}) {
-        @content;
-      }
-    } @else if $screen == retina {
-      @media screen and (min-device-pixel-ratio: 2),
-        screen and (-moz-min-device-pixel-ratio: 2),
-        screen and (-o-min-device-pixel-ratio: 2/1),
-        screen and (-webkit-min-device-pixel-ratio: 2),
-        screen and (min-resolution: 192dpi),
-        screen and (min-resolution: 2dppx) {
-        @content;
-      }
+  $mobile: 480px;
+  $tablet: 768px;
+  $desktop: 1200px;
+
+  @if $screen == mobile-only {
+    @media screen and (max-width: #{$tablet - 0.02}) {
+      @content;
+    }
+  } @else if $screen == mobile {
+    @media screen and (min-width: $mobile) {
+      @content;
+    }
+  } @else if $screen == tablet-only {
+    @media screen and (min-width: $tablet) and (max-width: #{$desktop - 0.02}) {
+      @content;
+    }
+  } @else if $screen == tablet {
+    @media screen and (min-width: $tablet) {
+      @content;
+    }
+  } @else if $screen == desktop {
+    @media screen and (min-width: $desktop) {
+      @content;
+    }
+  } @else if $screen == notDesktop {
+    @media screen and (max-width: #{$desktop - 0.02}) {
+      @content;
+    }
+  } @else if $screen == retina {
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (-moz-min-device-pixel-ratio: 2),
+      screen and (-o-min-device-pixel-ratio: 2/1),
+      screen and (-webkit-min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      @content;
     }
   }
+}
