--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,7 +16,7 @@
 @import "./components/address";
 @import "./components/join-form";
 
-@import "./components/pagination";
+@import "./components/cards";
 @import "./components/project";
 @import "./components/form/module";
 @import "./components/mobile_menu";
