--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,70 +1,54 @@
+.about {
+  padding-top: 0;
 
-.about{
-    padding-top: 0;
-
-    @media  screen and (max-width: 1199px) {
-        display: none;
-    }
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
 }
 
-.about__title{
-    margin-bottom: 50px;
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: var(--main-txt-mode-light);
+.about__title {
+  margin-bottom: 50px;
+  @include font(700, 36px, 1.16, 0.03em);
+  text-align: center;
+  color: var(--main-txt-mode-light);
 }
 
-
-.about__list{
-    display: flex;
-    justify-content: space-between;
+.about__list {
+  display: flex;
+  justify-content: space-between;
 }
 
-.about__wrapper{
-    position: relative;
+.about__wrapper {
+  position: relative;
 }
 
-.about__item{
-    margin-right: 30px;
-     position: relative;
-
-     &:last-child{
-        margin-right: 0;
-     }
-   
+.about__item {
+  margin-right: 30px;
+  position: relative;
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
-.about__img{
-    display: block;
-    width: 100%;
-    height: auto;
+.about__img {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
-.about__descriotion{
-    position: absolute;
-    left: 0;
-    bottom: 0;
+.about__descriotion {
+  position: absolute;
+  left: 0;
+  bottom: 0;
 
-    width: 100%;
-    height: 70px;
-    
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 70px;
 
-    color: var(--main-txt-mode-dark);
-    background-color: rgba(47, 48, 58, 0.8);
+  @include center-flex;
 
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    font-weight: 700;
-    
-   
+  color: var(--main-txt-mode-dark);
+  background-color: rgba(47, 48, 58, 0.8);
+  @include font(700, 14px, 1.14, 0.03em);
+  text-align: center;
+  text-transform: uppercase;
 }
