--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -9,14 +9,11 @@
 }
 
 .adress__list {
-  line-height: 1.17;
-  font-size: 14px;
-  line-height: 24px;
-  letter-spacing: 0.03em;
+  @include font(700, 14px, 1.71, 0.03em);
+
   @media screen and (min-width: 1200px) {
-    display: flex;
+    @include center-flex(flex, null, flex-start);
     flex-direction: column;
-    align-items: flex-start;
   }
 }
 
@@ -30,7 +27,7 @@
 
 .adress__map {
   color: var(--main-txt-mode-dark);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--cubic-bezier);
   &:hover,
   &:focus {
     color: var(--secondary-txt-mode-dark);
@@ -39,7 +36,7 @@
 .adress__mail,
 .adress__phone {
   color: var(--primary-txt-mode-dark);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--cubic-bezier);
   &:hover,
   &:focus {
     color: var(--secondary-txt-mode-dark);
