--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,139 +1,62 @@
-
-.clients__title{
-    font-size: 28px;
-    font-weight: 700;
-    line-height: 1.16;
-    text-align: center;
-    letter-spacing: 0.03em;
-
-    color: var(--main-txt-mode-light);
-
-    @media screen and (max-width: 1199px){
-        margin-bottom: 30px;
-    }
-
-
-    @media screen and (min-width: 1200px){
-        margin-bottom: 50px;
-        font-size: 36px;
-    }
-
+.clients__title {
+  @include font(700, 28px, 1.16, 0.03em);
+  text-align: center;
+  color: var(--main-txt-mode-light);
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 30px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    font-size: 36px;
+  }
 }
 
+.clients__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 30px;
 
-.clients__list{
-    display: flex;
-    flex-wrap: wrap ;
-    justify-content: center; 
-    gap: 30px;
-    
-    
-    
-    
-    @media screen and (min-width: 1200px){
-        flex-wrap: nowrap;
-        justify-content: space-between;
-        
-    }
-
+  @media screen and (min-width: 1200px) {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+  }
 }
 
-.clients__item{
-    
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
+.clients__item {
+  @include center-flex;
+  flex-wrap: wrap;
 
-    width: 210px;
-    height: 92px;
-    flex-basis: calc((100% - 30px) / 2);
+  width: 210px;
+  height: 92px;
+  flex-basis: calc((100% - 30px) / 2);
 
-    
+  @media screen and (min-width: 768px) {
+    width: 226px;
+    flex-basis: calc((100% - 60px) / 3);
+  }
 
-    @media screen and (min-width: 768px){
-        width: 226px;
-        flex-basis: calc((100% - 60px) / 3);
-    }
-
-    @media screen and (min-width: 1200px){
-        width: 170px;
-        flex-basis: calc((100% - 150px) / 6);
-    }
-
-    
-    
-    
-    
-    // @media screen and (max-width: 480px){
-
-    //     &:nth-child(2n){
-    //         margin-right: 0;
-    //     }
-
-    //     &:nth-last-child(-n+2){
-    //         margin-bottom: 0;
-    //     }
-
-    // } 
-
-    // @media screen and (min-width: 768px){
-       
-
-    //     &:last-child{
-    //     margin-right: 0;
-    //     }
-    
-    //     &:nth-child(3n){
-    //         margin-right: 0;
-            
-    //     }
-
-    //     &:nth-last-child(-n+3){
-    //         margin-bottom: 0;
-    //     }
-        
-    
-    // }
-
-    // @media screen and (min-width: 1200px){
-        
-    //     margin-bottom: 0;
-            
-    //     &:nth-child(3n){
-    //         margin-right: 30px;
-            
-    //     }
-    
-    // }
-
+  @media screen and (min-width: 1200px) {
+    width: 170px;
+    flex-basis: calc((100% - 150px) / 6);
+  }
 }
 
+.clients__link {
+  width: 100%;
+  height: 100%;
+  @include center-flex;
 
-.clients__link{
-    display: flex;
-    width: 100%;
-    height: 100%;
-    align-items: center;
-    justify-content: center;
-    
-    border: 1px solid var(--icon-main-color);
-    box-sizing: border-box;
-    border-radius: 4px;
-    fill: var(--icon-main-color);
-    
+  border: 1px solid var(--icon-main-color);
+  box-sizing: border-box;
+  border-radius: 4px;
+  fill: var(--icon-main-color);
 
-    &:hover,
-    &:focus{
-        fill: var(--bg-icon-hover-color);
-        border-color: var(--bg-icon-hover-color);
-    }
-   
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
-    
+  &:hover,
+  &:focus {
+    fill: var(--bg-icon-hover-color);
+    border-color: var(--bg-icon-hover-color);
+  }
+
+  transition: fill var(--cubic-bezier), border-color var(--cubic-bezier);
 }
-
-
-
-
