--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,159 +1,114 @@
-.header{
-    background-color: var(--bg-header);
-    border-bottom: 1px solid #ECECEC;
-
-    @media screen and (max-width: 767px){
-        padding: 16px 0px;
-    }
-    
+.header {
+  background-color: var(--bg-header);
+  border-bottom: 1px solid #ececec;
+  @media screen and (max-width: 767px) {
+    padding: 16px 0px;
+  }
 }
 
+.header__container {
+  display: flex;
+  align-items: center;
+}
 
-.header__container{
+.header__logo {
+  font-family: var(--secondary-font);
+  @include font(700, 26px, 1.19, 0.03em);
+  color: var(--main-txt-mode-light);
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+}
+.header__logo--primary {
+  color: var(--secondary-txt-mode-light);
+}
+.header__icon--menu {
+  opacity: 1;
+}
+.header__icon--close {
+  opacity: 0;
+}
+
+.header__link {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  color: var(--primary-txt-mode-light);
+  @media screen and (min-width: 768px) {
+    padding: 0;
+  }
+  @media screen and (min-width: 1200px) {
     display: flex;
     align-items: center;
-    
-       
-}
-
-
-.header__logo{
-    // margin-right: 93px;
-
-    font-family: var(--secondary-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.19;
-    
-    letter-spacing: 0.03em;
-
-    color: var(--main-txt-mode-light);
-
-    @media screen and (min-width: 768px){
-        margin-right: 88px;
-    }  
-}
-.header__logo--primary{
-    color: var(--secondary-txt-mode-light);
-
-}
-
-.header__icon--menu{
-    opacity: 1;
-}
-
-.header__icon--close{
-    opacity: 0;
-}
-
-.header__link{
-
-    font-weight: 500;
-    font-size: 12px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--primary-txt-mode-light);
-
-    @media screen and (min-width: 768px){
-        padding: 0;
-        
+    justify-content: center;
+    padding: 32px 0;
+    font-size: 14px;
+    transition: color var(--cubic-bezier);
+    &:hover,
+    &:focus {
+      color: var(--secondary-txt-mode-light);
     }
-
-    @media screen and (min-width: 1200px){
-
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 32px 0;
-        font-size: 14px;
-       
-        
-        transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-        &:hover,
-        &:focus{
-            color: var(--secondary-txt-mode-light);
-        }
-
-        
-    }
-    
+  }
 }
 
-.header__contact{
-
-    @media  screen and (max-width: 767px) {
-        display: none;
-    }
-
-    @media screen and (min-width: 768px){
-        display: block;
-        margin-left: auto;
-    }
-
-    @media screen and (min-width: 1200px){
-        display: flex;
-        align-items: center;
-        margin-left: auto;
-    }
+.header__contact {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  @media screen and (min-width: 768px) {
+    display: block;
+    margin-left: auto;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+  }
 }
 
-.header__wrapper{
+.header__wrapper {
+  @media screen and (min-width: 768px) {
+    margin-right: 0;
+    margin-bottom: 10px;
 
-    @media screen and (min-width: 768px){
-        margin-right: 0;
-        margin-bottom: 10px; 
-
-        &:last-child{
-            margin-bottom: 0;
-        }
+    &:last-child {
+      margin-bottom: 0;
     }
+  }
 
-    @media screen and (min-width: 1200px){
-        margin-bottom: 0;
-        margin-right: 50px;
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    margin-right: 50px;
 
-         &:last-child{
-            margin-right: 0;
+    &:last-child {
+      margin-right: 0;
     }
-
-}
-    
-    
+  }
 }
 
-
-.header__icon{
-
-    fill: currentColor;
-    margin-right: 10px;
-
+.header__icon {
+  fill: currentColor;
+  margin-right: 10px;
 }
 
-.header__icon--envelope{
-
-    @media screen and (min-width: 768px){
-        width: 14px;
-        height: 10px;
-    }
-
-    @media screen and (min-width: 1200px){
-        width: 16px;
-        height: 12px;
-    }
-
+.header__icon--envelope {
+  @media screen and (min-width: 768px) {
+    width: 14px;
+    height: 10px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 16px;
+    height: 12px;
+  }
 }
-
-
-.header__icon--smartphone{
-    @media screen and (min-width: 768px){
-        width: 10px;
-        height: 14px;
-    }
-
-    @media screen and (min-width: 1200px){
-        width: 10px;
-        height: 16px;
-    }
+.header__icon--smartphone {
+  @media screen and (min-width: 768px) {
+    width: 10px;
+    height: 14px;
+  }
+  @media screen and (min-width: 1200px) {
+    width: 10px;
+    height: 16px;
+  }
 }
-    
