--- a/sass/variables/_variables.scss
+++ b/sass/variables/_variables.scss
@@ -12,6 +12,9 @@
   --main-txt-mode-dark: #ffffff;
   --primary-txt-mode-dark: rgba(255, 255, 255, 0.6);
   --secondary-txt-mode-dark: #2196f3;
+  --button-focus-color: #188ce8;
+  --border-bottom-solid: #ececec;
+  --services-styles-solid: #eeeeee;
 
   --icon-main-color: #afb1b8;
   --icon-hover-color: #ffffff;
