--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -30,10 +30,7 @@
 }
 
 .header__link {
-  font-weight: 500;
-  font-size: 12px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
+  @include font(500, 12px, 1.14, 0.02em);
   color: var(--primary-txt-mode-light);
   @media screen and (min-width: 768px) {
     padding: 0;
@@ -71,16 +68,13 @@
   @media screen and (min-width: 768px) {
     margin-right: 0;
     margin-bottom: 10px;
-
     &:last-child {
       margin-bottom: 0;
     }
   }
-
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
     margin-right: 50px;
-
     &:last-child {
       margin-right: 0;
     }
