--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,13 +1,9 @@
 .team {
-  // width: 100%;
-  background-color: #f5f4fa;
+  background-color: var(--team-background-color);
 }
 .team__title {
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 1.16;
+  @include font(700, 28px, 1.16, 0.03em);
   text-align: center;
-  letter-spacing: 0.03em;
   color: var(--main-txt-mode-light);
   @media screen and (max-width: 1199px) {
     margin-bottom: 30px;
@@ -22,10 +18,8 @@
     display: block;
   }
   @media screen and (min-width: 768px) {
-    display: flex;
+    @include center-flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     grid-gap: 30px;
   }
   @media screen and (min-width: 1200px) {
@@ -37,7 +31,7 @@
 
 .team__item {
   margin-bottom: 30px;
-  background-color: #ffffff;
+  background-color: var(--main-txt-mode-dark);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
@@ -64,19 +58,14 @@
 }
 
 .team__name {
+  @include font(600, 16px, 1.18, 0.03em);
   margin-bottom: 10px;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.18;
-  letter-spacing: 0.03em;
   text-align: center;
-
   color: var(--main-txt-mode-light);
 }
 
 .team__profession {
   margin-bottom: 30px;
-
   font-size: 16px;
   line-height: 19px;
   text-align: center;
