--- a/sass/variables/_variables.scss
+++ b/sass/variables/_variables.scss
@@ -19,5 +19,6 @@
   --icon-main-color: #afb1b8;
   --icon-hover-color: #ffffff;
   --bg-icon-hover-color: #2196f3;
+  --team-background-color: #f5f4fa;
   --cubic-bezier: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
