--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "./utils/_visually-hidden";
 @import "./utils/mixin";
 
-@import "./base/base";
+@import "./utils/global-styles";
 
 @import "./components/header";
 @import "./components/nav";
