--- a/css/main.css
+++ b/css/main.css
@@ -281,7 +281,7 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-txt-mode-light);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--cubic-bezier);
 }
 
 .nav__link:hover, .nav__link:focus {
@@ -289,7 +289,7 @@ img {
 }
 
 .nav__link--active::after {
-  content: ' ';
+  content: " ";
   display: block;
   position: absolute;
   bottom: -1px;
@@ -994,9 +994,9 @@ img {
 }
 
 .join__title {
-  font-size: 14px;
-  line-height: 16px;
   font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--main-txt-mode-dark);
@@ -1032,7 +1032,7 @@ img {
   padding: 15px 16px;
   font-weight: 400;
   font-size: 16px;
-  line-height: 20px;
+  line-height: 1.3;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   background-color: #2f303a;
@@ -1061,8 +1061,8 @@ img {
 
 .join__button {
   display: flex;
+  justify-content: center;
   align-items: center;
-  text-align: center;
   width: 200px;
   height: 50px;
   padding: 13px 28px;
@@ -1073,7 +1073,7 @@ img {
   border: transparent;
   font-weight: 700;
   font-size: 16px;
-  line-height: 30px;
+  line-height: 1.9;
   letter-spacing: 0.06em;
 }
 
@@ -1248,7 +1248,7 @@ img {
   background-color: rgba(33, 150, 243, 0.9);
   bottom: 0px;
   transform: translateY(101%);
-  transition: transform 250ms var(--cubic-bezier);
+  transition: transform var(--cubic-bezier);
 }
 
 .project__link:hover .project__overlay,
@@ -1545,11 +1545,11 @@ img {
 }
 
 .mobile__button {
-  position: relative;
   display: flex;
-  padding: 0;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 0;
   margin-left: auto;
   background-color: transparent;
   border: none;
@@ -1624,7 +1624,7 @@ img {
   margin-bottom: 32px;
   font-weight: 500;
   font-size: 40px;
-  line-height: 47px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--main-txt-mode-light);
 }
@@ -1658,7 +1658,7 @@ img {
 .contact__item:first-child {
   font-weight: 500;
   font-size: 24px;
-  line-height: 40px;
+  line-height: 1.7;
   letter-spacing: 0.02em;
   margin-bottom: 32px;
   color: var(--secondary-txt-mode-light);
@@ -1667,7 +1667,7 @@ img {
 .contact__item:last-child {
   font-weight: 500;
   font-size: 24px;
-  line-height: 28px;
+  line-height: 1.17;
   letter-spacing: 0.02em;
   color: var(--primary-txt-mode-light);
 }
@@ -1683,7 +1683,7 @@ img {
   margin-right: -10px;
   font-weight: 500;
   font-size: 18px;
-  line-height: 22px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
   color: var(--secondary-txt-mode-light);
 }
