--- a/sass/components/_join-form.scss
+++ b/sass/components/_join-form.scss
@@ -16,10 +16,7 @@
 }
 
 .join__title {
-  font-size: 14px;
-  line-height: 16px;
-  font-weight: 700;
-  letter-spacing: 0.03em;
+  @include font(700, 14px, 1.14, 0.03em);
   text-transform: uppercase;
   color: var(--main-txt-mode-dark);
   margin-bottom: 20px;
@@ -47,11 +44,7 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   padding: 15px 16px;
-
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 20px;
-  letter-spacing: 0.03em;
+  @include font(400, 16px, 1.3, 0.03em);
   color: rgba(255, 255, 255, 0.6);
   background-color: rgba(47, 48, 58, 1);
 
@@ -59,11 +52,9 @@
     width: 100%;
     margin-bottom: 20px;
   }
-
   @media screen and (min-width: 768px) {
     margin: 0 0 20px;
   }
-
   @media screen and (min-width: 1200px) {
     margin-bottom: 0;
     margin-right: 12px;
@@ -72,9 +63,7 @@
 }
 
 .join__button {
-  display: flex;
-  align-items: center;
-  text-align: center;
+  @include center-flex;
   width: 200px;
   height: 50px;
   padding: 13px 28px;
@@ -84,11 +73,7 @@
   border-radius: 4px;
   color: rgba(255, 255, 255, 1);
   border: transparent;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 30px;
-  letter-spacing: 0.06em;
+  @include font(700, 16px, 1.9, 0.06em);
 
   @media screen and (max-width: 767px) {
     margin: auto;
