--- a/sass/components/form/_backdrop.scss
+++ b/sass/components/form/_backdrop.scss
@@ -1,42 +1,26 @@
+.backdrop {
+  z-index: 11;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 
-.backdrop{
-    z-index: 11;
-    position: fixed;
-    top:0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    background-color: rgba(0, 0, 0, 0.2);
-
-    opacity: 1;
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    overflow-y: scroll;
-
-    @media screen and (max-width: 1119px) {
-        padding-top: 93px;
-        
-    }
-
-    @media screen and (min-width: 1200px) {
-       padding: 15px 94px;
-    }
-       
-    
+  background-color: rgba(0, 0, 0, 0.2);
+  opacity: 1;
+  transition: opasity var(--cubic-bezier);
+  overflow-y: scroll;
+  @media screen and (max-width: 1119px) {
+    padding-top: 93px;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 15px 94px;
+  }
 }
-
-.backdrop.is-hidden{
-    opacity: 0;
-    pointer-events: none; 
-         
+.backdrop.is-hidden {
+  opacity: 0;
+  pointer-events: none;
 }
-
-
-.backdrop.is-hidden .modal{
-    transform: translate(-50%, -50%) scale(0.7);
-
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
 }
-
-
-    
