--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,7 +14,7 @@
 @import "./components/clients";
 @import "./components/footer";
 @import "./components/address";
-@import "./components/join-form";
+@import "./components/invites";
 
 @import "./components/cards";
 @import "./components/project";
