--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,7 +8,7 @@
 @import "./components/nav";
 @import "./components/hero";
 @import "./components/features";
-@import "./components/about";
+@import "./components/styless";
 @import "./components/team";
 @import "./components/networks";
 @import "./components/clients";
