--- a/css/main.css
+++ b/css/main.css
@@ -507,17 +507,17 @@ img {
   color: var(--primary-txt-mode-light);
 }
 
-.about {
+.styless {
   padding-top: 0;
 }
 
 @media screen and (max-width: 1199px) {
-  .about {
+  .styless {
     display: none;
   }
 }
 
-.about__title {
+.styless__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -527,31 +527,31 @@ img {
   color: var(--main-txt-mode-light);
 }
 
-.about__list {
+.styless__list {
   display: flex;
   justify-content: space-between;
 }
 
-.about__wrapper {
+.styless__wrapper {
   position: relative;
 }
 
-.about__item {
+.styless__item {
   margin-right: 30px;
   position: relative;
 }
 
-.about__item:last-child {
+.styless__item:last-child {
   margin-right: 0;
 }
 
-.about__img {
+.styless__img {
   display: block;
   width: 100%;
   height: auto;
 }
 
-.about__descriotion {
+.styless__descriotion {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -932,7 +932,7 @@ img {
   }
 }
 
-.adress__list {
+.address__list {
   font-weight: 700;
   font-size: 14px;
   line-height: 1.71;
@@ -940,28 +940,28 @@ img {
 }
 
 @media screen and (min-width: 1200px) {
-  .adress__list {
+  .address__list {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
   }
 }
 
-.adress__item {
+.address__item {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.adress__item:last-child {
+.address__item:last-child {
   margin-bottom: 0;
 }
 
-.adress__map {
+.address__map {
   color: var(--main-txt-mode-dark);
   transition: color var(--cubic-bezier);
 }
 
-.adress__map:hover, .adress__map:focus {
+.address__map:hover, .address__map:focus {
   color: var(--secondary-txt-mode-dark);
 }
 
