--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -6,33 +6,31 @@
   @media screen and (min-width: 1200px) {
     padding-left: 15px;
   }
-}
+  &__list {
+    @include font(700, 14px, 1.71, 0.03em);
 
-.adress__list {
-  @include font(700, 14px, 1.71, 0.03em);
-
-  @media screen and (min-width: 1200px) {
-    @include center-flex(flex, null, flex-start);
-    flex-direction: column;
+    @media screen and (min-width: 1200px) {
+      @include center-flex(flex, null, flex-start);
+      flex-direction: column;
+    }
+  }
+  &__item {
+    margin-bottom: 10px;
+    text-align: center;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
+  &__map {
+    color: var(--main-txt-mode-dark);
+    transition: color var(--cubic-bezier);
+    &:hover,
+    &:focus {
+      color: var(--secondary-txt-mode-dark);
+    }
   }
 }
 
-.adress__item {
-  margin-bottom: 10px;
-  text-align: center;
-  &:last-child {
-    margin-bottom: 0;
-  }
-}
-
-.adress__map {
-  color: var(--main-txt-mode-dark);
-  transition: color var(--cubic-bezier);
-  &:hover,
-  &:focus {
-    color: var(--secondary-txt-mode-dark);
-  }
-}
 .adress__mail,
 .adress__phone {
   color: var(--primary-txt-mode-dark);
