--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -85,6 +85,6 @@
   //   font-size: 14px;
   //   line-height: 1.71;
   //   letter-spacing: 0.03em;
-  @include font(14px, 1.71, 0.03em);
+  @include font(null, 14px, 1.71, 0.03em);
   color: var(--primary-txt-mode-light);
 }
