--- a/sass/components/_invites.scss
+++ b/sass/components/_invites.scss
@@ -7,54 +7,58 @@
       margin-bottom: 0;
     }
   }
-  &__networks {
-    @media screen and (min-width: 1200px) {
-      margin-right: 93px;
-    }
+}
+
+.invites__networks {
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
   }
-  &__title {
-    @include font(700, 14px, 1.14, 0.03em);
-    text-transform: uppercase;
-    color: var(--main-txt-mode-dark);
-    margin-bottom: 20px;
-    @media screen and (max-width: 1199px) {
-      text-align: center;
-    }
-  }
-  &__container {
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
+}
+
+.invites__title {
+  @include font(700, 14px, 1.14, 0.03em);
+  text-transform: uppercase;
+  color: var(--main-txt-mode-dark);
+  margin-bottom: 20px;
+  @media screen and (max-width: 1199px) {
     text-align: center;
-
-    @media screen and (min-width: 1200px) {
-      display: flex;
-      margin: 0;
-    }
   }
-  &__email {
-    width: 450px;
-    height: 50px;
-    border: 1px solid rgba(255, 255, 255, 0.3);
-    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-    border-radius: 4px;
-    padding: 15px 16px;
-    @include font(400, 16px, 1.3, 0.03em);
-    color: rgba(255, 255, 255, 0.6);
-    background-color: rgba(47, 48, 58, 1);
+}
 
-    @media screen and (max-width: 767px) {
-      width: 100%;
-      margin-bottom: 20px;
-    }
-    @media screen and (min-width: 768px) {
-      margin: 0 0 20px;
-    }
-    @media screen and (min-width: 1200px) {
-      margin-bottom: 0;
-      margin-right: 12px;
-      width: 358px;
-    }
+.invites__container {
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    margin: 0;
+  }
+}
+
+.invites__email {
+  width: 450px;
+  height: 50px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px 16px;
+  @include font(400, 16px, 1.3, 0.03em);
+  color: rgba(255, 255, 255, 0.6);
+  background-color: rgba(47, 48, 58, 1);
+
+  @media screen and (max-width: 767px) {
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  @media screen and (min-width: 768px) {
+    margin: 0 0 20px;
+  }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    margin-right: 12px;
+    width: 358px;
   }
 }
 
@@ -70,6 +74,10 @@
   color: rgba(255, 255, 255, 1);
   border: transparent;
   @include font(700, 16px, 1.9, 0.06em);
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  letter-spacing: 0.06em;
 
   @media screen and (max-width: 767px) {
     margin: auto;
