--- a/sass/components/_mobile_menu.scss
+++ b/sass/components/_mobile_menu.scss
@@ -46,7 +46,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: var(--bg-header);
+  background-color: var(--header);
   z-index: 5;
 
   opacity: 0;
