--- a/sass/components/_networks.scss
+++ b/sass/components/_networks.scss
@@ -1,40 +1,45 @@
 .networks {
   display: flex;
   justify-content: center;
-  &__item {
-    width: 44px;
-    height: 44px;
-    margin-right: 10px;
-    &:last-child {
-      margin-right: 0;
-    }
+}
+
+.networks__item {
+  width: 44px;
+  height: 44px;
+  margin-right: 10px;
+  &:last-child {
+    margin-right: 0;
   }
-  &__link {
-    width: 100%;
-    height: 100%;
-    @include center-flex;
-    color: var(--icon-main-color);
-    background-color: var(--main-txt-mode-dark);
+}
+
+.networks__link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--icon-main-color);
+  background-color: var(--main-txt-mode-dark);
+  border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    background-color: var(--bg-icon-hover-color);
+    color: var(--main-txt-mode-dark);
     border-radius: 50%;
-    transition: color var(--cubic-bezier), background-color var(--cubic-bezier);
-    &:hover,
-    &:focus {
-      background-color: var(--bg-icon-hover-color);
-      color: var(--main-txt-mode-dark);
-      border-radius: 50%;
-    }
   }
-  &__icon {
-    fill: var(--icon-main-color);
-    &:hover,
-    &:focus {
-      fill: var(--icon-hover-color);
-    }
-    &--dark__mode {
-      background-color: rgba(255, 255, 255, 0.1);
-    }
-    &-footer {
-      fill: var(--icon-hover-color);
-    }
+}
+.networks__icon--dark__mode {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.networks__icon {
+  fill: var(--icon-main-color);
+  &:hover,
+  &:focus {
+    fill: var(--icon-hover-color);
   }
+}
+.networks__icon--footer {
+  fill: var(--icon-hover-color);
 }
