--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,6 +1,7 @@
 .hero {
   background-color: var(--mode-dark);
   text-align: center;
+  width: 100%;
   padding-top: 118px;
   padding-bottom: 118px;
   margin-left: auto;
