--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -4,121 +4,114 @@
     display: flex;
     flex-wrap: wrap;
   }
-}
-
-.project__item {
-  margin-bottom: 30px;
-  @media screen and (max-width: 767.97px) {
-    justify-content: center;
-  }
-  @media screen and (min-width: 768px) {
-    margin-top: 30px;
-    margin-right: 30px;
-    max-width: 354px;
-    margin-bottom: 0;
-    &:nth-child(2n + 2) {
-      margin-right: 0;
+  &__item {
+    margin-bottom: 30px;
+    @media screen and (max-width: 767.97px) {
+      justify-content: center;
     }
-    &:nth-child(-n + 2) {
-      margin-top: 0;
-    }
-    @media screen and (min-width: 1200px) {
-      max-width: 370px;
-      &:nth-child(-n + 3) {
-        margin-top: 0;
-      }
-      max-width: 370px;
+    @media screen and (min-width: 768px) {
+      margin-top: 30px;
       margin-right: 30px;
+      max-width: 354px;
+      margin-bottom: 0;
       &:nth-child(2n + 2) {
-        margin-right: 30px;
-      }
-      &:nth-child(3n) {
         margin-right: 0;
       }
-      &:nth-last-child(-n + 3) {
-        margin-bottom: 0;
+      &:nth-child(-n + 2) {
+        margin-top: 0;
+      }
+      @media screen and (min-width: 1200px) {
+        max-width: 370px;
+        &:nth-child(-n + 3) {
+          margin-top: 0;
+        }
+        max-width: 370px;
+        margin-right: 30px;
+        &:nth-child(2n + 2) {
+          margin-right: 30px;
+        }
+        &:nth-child(3n) {
+          margin-right: 0;
+        }
+        &:nth-last-child(-n + 3) {
+          margin-bottom: 0;
+        }
       }
     }
   }
-}
-
-.project__link {
-  display: block;
-  position: relative;
-  text-decoration: none;
-  transition: color var(--cubic-bezier),
-    background-color 250ms var(--cubic-bezier),
-    box-shadow 250ms var(--cubic-bezier);
-  &:hover,
-  &:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+  &__link {
+    display: block;
+    position: relative;
+    text-decoration: none;
+    transition: color var(--cubic-bezier),
+      background-color 250ms var(--cubic-bezier),
+      box-shadow 250ms var(--cubic-bezier);
+    &:hover,
+    &:focus {
+      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
+    @media screen and (min-width: 768px) {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+    }
   }
-  @media screen and (min-width: 768px) {
-    display: flex;
-    flex-direction: column;
+  &__wrapper {
+    position: relative;
+    overflow: hidden;
+  }
+  &__overlay {
+    position: absolute;
+    width: 100%;
+    height: 294px;
+    background-color: rgba(33, 150, 243, 0.9);
+    bottom: 0px;
+    transform: translateY(101%);
+    transition: transform var(--cubic-bezier);
+  }
+  &__img {
+    display: block;
+    @media screen and (max-width: 767px) {
+      width: 100%;
+    }
+    @media screen and (min-width: 1200px) {
+      width: 370px;
+      height: 294px;
+    }
+  }
+  &__description {
+    @include center-flex;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    padding: 25px;
+    width: 100%;
     height: 100%;
+    @include font(400, 15px, 1.24, 0.03em);
+    color: var(--main-txt-mode-dark);
+    overflow: scroll;
+    @media screen and (min-width: 480px) {
+      font-size: 18px;
+      line-height: 1.56;
+    }
   }
-}
-
-.project__wrapper {
-  position: relative;
-  overflow: hidden;
-}
-
-.project__overlay {
-  position: absolute;
-  width: 100%;
-  height: 294px;
-  background-color: rgba(33, 150, 243, 0.9);
-  bottom: 0px;
-  transform: translateY(101%);
-  transition: transform var(--cubic-bezier);
+  &__details {
+    padding-left: 24px;
+    padding-right: 24px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background: var(--icon-hover-color);
+    border: 1px solid var(--services-styles-solid);
+    @media screen and (min-width: 768px) and (max-width: 1199.9px) {
+      flex-grow: 1;
+    }
+  }
 }
 
 .project__link:hover .project__overlay,
 .project__link:focus .project__overlay {
   transform: translateY(0);
-}
-
-.project__img {
-  display: block;
-  @media screen and (max-width: 767px) {
-    width: 100%;
-  }
-  @media screen and (min-width: 1200px) {
-    width: 370px;
-    height: 294px;
-  }
-}
-
-.project__description {
-  @include center-flex;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  padding: 25px;
-  width: 100%;
-  height: 100%;
-  @include font(400, 15px, 1.24, 0.03em);
-  color: var(--main-txt-mode-dark);
-  overflow: scroll;
-  @media screen and (min-width: 480px) {
-    font-size: 18px;
-    line-height: 1.56;
-  }
-}
-
-.project__details {
-  padding-left: 24px;
-  padding-right: 24px;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  background: var(--icon-hover-color);
-  border: 1px solid var(--services-styles-solid);
-  @media screen and (min-width: 768px) and (max-width: 1199.9px) {
-    flex-grow: 1;
-  }
 }
 
 .project__name {
