--- a/css/main.css
+++ b/css/main.css
@@ -1246,7 +1246,7 @@ img {
 .project__overlay {
   position: absolute;
   width: 100%;
-  height: 294px;
+  height: 100%;
   background-color: rgba(33, 150, 243, 0.9);
   bottom: 0px;
   transform: translateY(101%);
@@ -1277,9 +1277,10 @@ img {
   position: absolute;
   left: 0;
   bottom: 0;
-  padding: 25px;
   width: 100%;
   height: 100%;
+  font-size: 18px;
+  line-height: 1.56;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.24;
@@ -1519,6 +1520,13 @@ img {
   border-radius: 4px;
   margin-right: 9px;
   flex-shrink: 0;
+}
+
+@media screen and (min-width: 1200px) {
+  .form__icon--te {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .form__link {
