--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -64,7 +64,7 @@
   &__overlay {
     position: absolute;
     width: 100%;
-    height: 294px;
+    height: 100%;
     background-color: rgba(33, 150, 243, 0.9);
     bottom: 0px;
     transform: translateY(101%);
@@ -85,9 +85,11 @@
     position: absolute;
     left: 0;
     bottom: 0;
-    padding: 25px;
+    // padding: 25px;
     width: 100%;
     height: 100%;
+    font-size: 18px;
+    line-height: 1.56;
     @include font(400, 15px, 1.24, 0.03em);
     color: var(--main-txt-mode-dark);
     overflow: scroll;
