--- a/css/main.css
+++ b/css/main.css
@@ -284,7 +284,7 @@ img {
   transition: color var(--cubic-bezier);
 }
 
-.nav__link:hover, .nav__link:focus {
+.nav__link:hover, .nav__link:focus, .nav__link--active {
   color: var(--secondary-txt-mode-light);
 }
 
@@ -1662,7 +1662,7 @@ img {
 
 .contact__item:first-child {
   font-weight: 500;
-  font-size: 24px;
+  font-size: 34px;
   line-height: 1.7;
   letter-spacing: 0.02em;
   margin-bottom: 32px;
