--- a/css/main.css
+++ b/css/main.css
@@ -379,11 +379,13 @@ img {
 
 .hero__btn {
   display: block;
+  box-shadow: none;
   margin-right: auto;
   margin-left: auto;
   padding-top: 10px;
   padding-left: 32px;
   padding-right: 32px;
+  border: none;
   padding-bottom: 10px;
   font-family: inherit;
   font-weight: 700;
@@ -393,14 +395,15 @@ img {
   align-items: center;
   text-align: center;
   color: var(--main-txt-mode-dark);
-  background-color: var(--button);
+  background-color: var(--button-focus-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 
 .hero__btn:hover, .hero__btn:focus {
-  color: var(--main-txt-mode-dark);
-  background-color: var(--button);
+  background: var(--secondary-txt-mode-dark);
 }
 
 @media screen and (max-width: 767px) {
@@ -1057,7 +1060,9 @@ img {
   width: 200px;
   height: 50px;
   padding: 13px 28px;
-  background-color: var(--bg-icon-hover-color);
+  font-family: "Roboto";
+  color: var(--bg-icon-hover-color);
+  background-color: var(--button-focus-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: white;
@@ -1070,6 +1075,12 @@ img {
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.06em;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+}
+
+.invites__button:hover, .invites__button:focus {
+  background: var(--secondary-txt-mode-dark);
 }
 
 @media screen and (max-width: 767px) {
@@ -1082,6 +1093,10 @@ img {
   .invites__button {
     margin-left: auto;
     margin-right: auto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
   }
 }
 
@@ -1274,6 +1289,8 @@ img {
   height: 100%;
   font-size: 18px;
   line-height: 1.56;
+  padding-left: 24px;
+  padding-right: 24px;
   font-weight: 400;
   font-size: 15px;
   line-height: 1.24;
@@ -1286,6 +1303,26 @@ img {
   .project__description {
     font-size: 18px;
     line-height: 1.56;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .project__description {
+    font-size: 18px;
+    line-height: 1.56;
+    padding-left: 24px;
+    padding-right: 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .project__description {
+    font-size: 18px;
+    line-height: 1.56;
+    padding-left: 24px;
+    padding-right: 24px;
   }
 }
 
