--- a/sass/components/_invites.scss
+++ b/sass/components/_invites.scss
@@ -67,8 +67,9 @@
   width: 200px;
   height: 50px;
   padding: 13px 28px;
-
-  background-color: var(--bg-icon-hover-color);
+  font-family: "Roboto";
+  color: var(--bg-icon-hover-color);
+  background-color: var(--button-focus-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   color: rgba(255, 255, 255, 1);
@@ -78,6 +79,12 @@
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.06em;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    background: var(--secondary-txt-mode-dark);
+  }
 
   @media screen and (max-width: 767px) {
     margin: auto;
@@ -86,6 +93,10 @@
   @media screen and (min-width: 768px) {
     margin-left: auto;
     margin-right: auto;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.06em;
   }
 }
 
