--- a/sass/components/_project.scss
+++ b/sass/components/_project.scss
@@ -90,12 +90,28 @@
     height: 100%;
     font-size: 18px;
     line-height: 1.56;
+    padding-left: 24px;
+    padding-right: 24px;
     @include font(400, 15px, 1.24, 0.03em);
     color: var(--main-txt-mode-dark);
     overflow: scroll;
     @media screen and (min-width: 480px) {
       font-size: 18px;
       line-height: 1.56;
+      padding-left: 24px;
+      padding-right: 24px;
+    }
+    @media screen and (max-width: 767px) {
+      font-size: 18px;
+      line-height: 1.56;
+      padding-left: 24px;
+      padding-right: 24px;
+    }
+    @media screen and (min-width: 1200px) {
+      font-size: 18px;
+      line-height: 1.56;
+      padding-left: 24px;
+      padding-right: 24px;
     }
   }
   &__details {
